# rust_actix_geo_widget

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: deploy-image.yml  dockerfile-check.yml  rust-check.yml  rust.yml
kubernetes/: deployment.yaml  ingress.yaml  ingressroute.yaml  namespace.yaml  pod.yaml  pv-claim.yaml  pv-volume.yaml  service.yaml
src/: lib.rs  main.rs
