[package]
name = "actix-geo-widget"
version = "0.0.1"
edition = "2021"

[dependencies]
actix-web = "4.11.0"
actix-web-prom = "0.10.0"
chrono = "0.4.42"
clap = { version = "4.5.48", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.28"
maxminddb = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
